welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: type mismatch;
 found   : java.awt.Color
 required: Int
		X==T(i)
                     ^